@@ -2,6 +2,9 @@
     - Bug fix: was a fatal error when a value was submitted for Label element
       (code called delete_nested_hash_value instead of deleted_nested_hash_key).
     
+    - Bug fix: RT#65728 Filter::Split should return a value if no value was
+      submitted.
+    
     - DateTime elements, minutes and seconds have new 'interval' option.
     
     - Now only delete submitted value if there's no other field on the form with
